// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide add button and edit menu when in readOnly mode 1`] = `
<div
  className="SourcesList"
>
  <div
    className="header"
  >
    <h1>
      Data Sources
    </h1>
    <div
      className="searchContainer"
    >
      <Icon
        className="searchIcon"
        type="search"
      />
      <ForwardRef(Input)
        className="searchInput"
        onChange={[Function]}
        onClear={[Function]}
        placeholder="Filter for name..."
        required={true}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="content"
  >
    <ul>
      <ListItem
        className="process"
        key="defKey"
      >
        <ListItemSection
          className="icon"
        >
          <ForwardRef(SvgProcess) />
        </ListItemSection>
        <ListItemSection
          className="name"
        >
          <div
            className="type"
          >
            Process
          </div>
          <div
            className="entityName"
          >
            definition name
          </div>
        </ListItemSection>
        <ListItemSection
          className="tenants"
        >
          Not defined, Sales
        </ListItemSection>
      </ListItem>
      <ListItem
        className="decision"
        key="defKey2"
      >
        <ListItemSection
          className="icon"
        >
          <ForwardRef(SvgDecision) />
        </ListItemSection>
        <ListItemSection
          className="name"
        >
          <div
            className="type"
          >
            Decision Table
          </div>
          <div
            className="entityName"
          >
            decision report
          </div>
        </ListItemSection>
        <ListItemSection
          className="tenants"
        >
          Not defined, Marketing
        </ListItemSection>
      </ListItem>
    </ul>
  </div>
  <ConfirmationModal
    entityName={null}
    loading={false}
    onClose={[Function]}
    onConfirm={[Function]}
    open={null}
  />
  <AddSourceModalErrorHandler
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
  />
</div>
`;

exports[`should match snapshot 1`] = `
<div
  className="SourcesList"
>
  <div
    className="header"
  >
    <h1>
      Data Sources
    </h1>
    <div
      className="searchContainer"
    >
      <Icon
        className="searchIcon"
        type="search"
      />
      <ForwardRef(Input)
        className="searchInput"
        onChange={[Function]}
        onClear={[Function]}
        placeholder="Filter for name..."
        required={true}
        type="text"
        value=""
      />
    </div>
    <ForwardRef(Button)
      onClick={[Function]}
    >
      Add
    </ForwardRef(Button)>
  </div>
  <div
    className="content"
  >
    <ul>
      <ListItem
        className="process"
        key="defKey"
      >
        <ListItemSection
          className="icon"
        >
          <ForwardRef(SvgProcess) />
        </ListItemSection>
        <ListItemSection
          className="name"
        >
          <div
            className="type"
          >
            Process
          </div>
          <div
            className="entityName"
          >
            definition name
          </div>
        </ListItemSection>
        <ListItemSection
          className="tenants"
        >
          Not defined, Sales
        </ListItemSection>
        <div
          className="contextMenu"
        >
          <Dropdown
            label={
              <Icon
                size="24px"
                type="overflow-menu-vertical"
              />
            }
          >
            <ForwardRef(DropdownOption)
              onClick={[Function]}
            >
              <Icon
                type="edit"
              />
              Edit
            </ForwardRef(DropdownOption)>
            <ForwardRef(DropdownOption)
              onClick={[Function]}
            >
              <Icon
                type="delete"
              />
              Delete
            </ForwardRef(DropdownOption)>
          </Dropdown>
        </div>
      </ListItem>
      <ListItem
        className="decision"
        key="defKey2"
      >
        <ListItemSection
          className="icon"
        >
          <ForwardRef(SvgDecision) />
        </ListItemSection>
        <ListItemSection
          className="name"
        >
          <div
            className="type"
          >
            Decision Table
          </div>
          <div
            className="entityName"
          >
            decision report
          </div>
        </ListItemSection>
        <ListItemSection
          className="tenants"
        >
          Not defined, Marketing
        </ListItemSection>
        <div
          className="contextMenu"
        >
          <Dropdown
            label={
              <Icon
                size="24px"
                type="overflow-menu-vertical"
              />
            }
          >
            <ForwardRef(DropdownOption)
              onClick={[Function]}
            >
              <Icon
                type="edit"
              />
              Edit
            </ForwardRef(DropdownOption)>
            <ForwardRef(DropdownOption)
              onClick={[Function]}
            >
              <Icon
                type="delete"
              />
              Delete
            </ForwardRef(DropdownOption)>
          </Dropdown>
        </div>
      </ListItem>
    </ul>
  </div>
  <ConfirmationModal
    entityName={null}
    loading={false}
    onClose={[Function]}
    onConfirm={[Function]}
    open={null}
  />
  <AddSourceModalErrorHandler
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
  />
</div>
`;
